welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:9: error: too many arguments for method gauche: ()Unit
gauche(2)
      ^