welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
leveBrosse
gauche()
avance(4)
droite()
avance(2)
gauche()
avance(2)
gauche(2)
var x = 0
while (x < 4*8*10) {
	if (estFaceMur) {
		gauche()
	}
    avance();
    x = x + 1
}
gauche()
